--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "template for TDD with typescript, express & node",
   "main": "index.js",
   "scripts": {
-    "start": "NODE_PATH=./dist node dist/app.js",
-    "dev": "NODE_ENV=dev nodemon -r tsconfig-paths/register src/app.ts",
+    "start": "NODE_PATH=./dist node dist/index.js",
+    "dev": "nodemon -r tsconfig-paths/register src/index.ts",
     "build": "tsc -p .",
     "test": "NODE_ENV=test mocha --check-leaks -r ts-node/register -r tsconfig-paths/register \"src/test/**/*.spec.ts\""
   },
@@ -13,7 +13,11 @@
   "license": "MIT",
   "dependencies": {
     "dotenv": "^10.0.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mysql2": "^2.3.2",
+    "pg": "^8.7.1",
+    "reflect-metadata": "^0.1.13",
+    "typeorm": "^0.2.38"
   },
   "devDependencies": {
     "@types/chai": "^4.2.22",
