--- a/package.json
+++ b/package.json
@@ -12,19 +12,26 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "acl": "^0.4.11",
+    "bcrypt": "^5.0.1",
+    "class-validator": "^0.13.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "mysql2": "^2.3.2",
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
-    "typeorm": "^0.2.38"
+    "typeorm": "^0.2.38",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@types/acl": "^0.4.39",
+    "@types/bcrypt": "^5.0.0",
     "@types/chai": "^4.2.22",
     "@types/express": "^4.17.13",
     "@types/mocha": "^9.0.0",
     "@types/node": "^16.10.2",
     "@types/supertest": "^2.0.11",
+    "@types/uuid": "^8.3.1",
     "chai": "^4.3.4",
     "mocha": "^9.1.2",
     "nodemon": "^2.0.13",
