feat: add windston logs

--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.2.38",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "winston": "^3.3.3"
   },
   "devDependencies": {
     "@types/acl": "^0.4.39",
